--- a/client/stylesheets/scss/navBar.scss
+++ b/client/stylesheets/scss/navBar.scss
@@ -9,7 +9,7 @@
 
 .topNavBar {
 	border-bottom: thin solid #d3d3d3;
-	position: fixed;
+	position: absolute;
 	background: white !important;
 }
 
